--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AllAlbumsActivity"
+            android:label="@string/title_activity_all_albums"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AlbumTracksActivity"
+            android:label="@string/title_activity_album_tracks"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
